----------------------
Version 1.1.0 -> 1.1.1
----------------------
New Features
- Added Check that Character is Selected if Api is Entered during registration
- Added xml Cache
- Added Option to Lock Avatars to Eve Characters Only
- Added Ability to reorder Rules
- You can now pull Characters under Settings Page with out the need to save
- Corp Name and Alliance Name can be used in rules and it gets ID for you
- New Condition (Valid API) true for all valid API's
- Added the ability to do rules that are iver is or isnt

Bug Fixes
- Fixed a Bug with registration when charname has an apostrophe in it
- Changed Cron file to use Relitive path from File to get SSI.php
- Corp / Alliance ID under Setting is no Longer used and has been Replaced by Rules
- Additional groups no longer removed by api error caused by CCP server being down
- Fixed issue with username that are numeric
- Fixed Skill Check when % isnt used